# django-allauth-no-username

./: README.md  pyproject.toml
no_username/: settings.py  urls.py
templates/: home.html
