[tool.poetry]
name = "django-no-username-allauth"
version = "0.1.0"
description = ""
authors = ["Josh Karamuth <hello@joshkaramuth.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
django-allauth = {extras = ["socialaccount"], version = "^0.63.2"}

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
